Отработать замечания review 1 sprint_11 о которых небыло сказано